--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "handlebars": "^4.7.6",
-    "inline-css": "^3.0.0",
-    "puppeteer": "^10.4.0"
+    "inline-css": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
